sif_macro/tests/fail/rename_without_followup_case_2.rs
#[macro_use]
extern crate sif_macro;

#[parameterized]
#[rename(no_cases)]
pub(crate) fn my_test(a: u8) {}

fn main() {}
